--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -43,7 +43,11 @@
                     <span *ngIf="usuario.semestre > 10">10+</span>
                 </p>
                 <p><strong>Correo: </strong>{{usuario.email}}</p>
-                <p *ngIf="usuario.tipoUsuario == 'PROFESOR'"><strong>Grupo investigación: </strong>no disponible</p>
+                <p *ngIf="usuario.tipoUsuario == 'PROFESOR'">
+                    <strong>Grupo investigación: </strong>
+                    <span *ngIf="usuario.grupoInvestigacion">{{usuario.grupoInvestigacion}}</span>
+                    <span *ngIf="!usuario.grupoInvestigacion">-</span>
+                </p>
                 <p><strong>Tipo usuario: </strong>{{usuario.tipoUsuario}}</p>
             </div>
         </div>
@@ -203,66 +207,66 @@
     <div *ngIf="activeTab == 'friends'" class="col-xs-12">
         <div class="panel panel-default" *ngIf="!usuario.amigos || usuario.amigos?.length == 0">
             <div class="panel-heading center">
-                <img class="find_user" src="images/find-user.png"/>
+                <img class="find_user" src="images/find-user.png" />
                 <h3>Aún no tiene amigos en su red.</h3>
                 <button (click)="search()" type="button" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Buscar</button>
             </div>
         </div>
         <div class="row">
             <div *ngFor="let a of usuario.amigos" class="col-xs-4">
-                <button type="button" data-toggle="tooltip" title="Eliminar" (click)="eliminarAmigo(a.username)" class="btn btn-danger btn-circle right"><i class="glyphicon glyphicon-remove"></i></button>
-                <a (click)="goProfile(a.username)">
-                    <div class="card">
-                        <img src="images/image-profile.png">
-                        <div class="container-card">
-                            <h3>{{a.nombre}}</h3>
-                            <br>
-                        </div>
+                <div class="card">
+                    <button type="button" data-toggle="tooltip" title="Eliminar" (click)="eliminarAmigo(a.username)" class="btn btn-danger btn-circle remove"><i class="glyphicon glyphicon-remove"></i></button>
+                    <img src="images/image-profile.png" class="find-user">
+                    <div class="container-card">
+                        <h2 class="name-card">{{a.nombre}}</h2>
+                        <p class="title-card">{{a.carrera}}</p>
+                        <p>@{{a.username}}</p>
+                        <p><button (click)="goProfile(a.username)" class="button-card">Ver perfil</button></p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
     <div *ngIf="activeTab == 'followers'" class="col-xs-12">
         <div class="panel panel-default" *ngIf="!usuario.seguidores || usuario.seguidores?.length == 0">
             <div class="panel-heading center">
-                <img class="find_user" src="images/find-user.png"/>
+                <img class="find_user" src="images/find-user.png" />
                 <h3>Aún no tiene seguidores en su red.</h3>
             </div>
         </div>
         <div class="row">
             <div *ngFor="let s of usuario.seguidores" class="col-xs-4">
-                <a (click)="goProfile(s.username)">
-                    <div class="card">
-                        <img src="images/image-profile.png">
-                        <div class="container-card">
-                            <h3>{{s.nombre}}</h3>
-                            <br>
-                        </div>
+                <div class="card">
+                    <img src="images/image-profile.png" class="find-user">
+                    <div class="container-card">
+                        <h2 class="name-card">{{s.nombre}}</h2>
+                        <p class="title-card">{{s.carrera}}</p>
+                        <p>@{{s.username}}</p>
+                        <p><button (click)="goProfile(s.username)" class="button-card">Ver perfil</button></p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
     <div *ngIf="activeTab == 'following'" class="col-xs-12">
         <div class="panel panel-default" *ngIf="!usuario.siguiendo || usuario.siguiendo?.length == 0">
             <div class="panel-heading center">
-                <img class="find_user" src="images/find-user.png"/>
+                <img class="find_user" src="images/find-user.png" />
                 <h3>Aún no está siguiendo a alguien.</h3>
                 <button (click)="search()" type="button" class="btn btn-success"><i class="glyphicon glyphicon-search"></i> Buscar</button>
             </div>
         </div>
         <div class="row">
             <div *ngFor="let s of usuario.siguiendo" class="col-xs-4">
-                <a (click)="goProfile(s.username)">
-                    <div class="card">
-                        <img src="images/image-profile.png">
-                        <div class="container-card">
-                            <h3>{{s.nombre}}</h3>
-                            <br>
-                        </div>
+                <div class="card">
+                    <img src="images/image-profile.png" class="find-user">
+                    <div class="container-card">
+                        <h2 class="name-card">{{s.nombre}}</h2>
+                        <p class="title-card">{{s.carrera}}</p>
+                        <p>@{{s.username}}</p>
+                        <p><button (click)="goProfile(s.username)" class="button-card">Ver perfil</button></p>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
