Compartir idea falta arreglar like a compartida

--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -5,12 +5,13 @@
         <div class="panel-body">{{idea.comentarios}}</div>
         <div class="row">
             <div class="col-xs-4"><button type="button" (click)="light()" 
-                class="btn btn-default btn-block" [style.backgroundColor] = "(idea.isLight)? '#DBA901':'grey'"><i class="glyphicon glyphicon-asterisk">
+                class="btn btn-default btn-block" [style.backgroundColor] = "(idea.isLight)? '#DBA901' : 'Transparent'"><i class="glyphicon glyphicon-asterisk">
                 </i> Light</button></div>
             <div class="col-xs-4"><button type="button" (click)="comentar()" 
                 class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" >
                 </i> Comentar</button></div>
-            <div class="col-xs-4"><button type="button" class="btn btn-default btn-block">
+            <div class="col-xs-4"><button type="button" class="btn btn-default btn-block"
+                (click) = "compartir()" [class.disabled] = "idea.isCompartida">
                 <i class="glyphicon glyphicon-share"></i> Share</button></div>
         </div>
     </div>
