--- a/src/app/access/signup.component.html
+++ b/src/app/access/signup.component.html
@@ -148,7 +148,7 @@
                 <label class="col-sm-2 control-label">Doble programa</label>
                 <div class="col-sm-10">
                     <select [(ngModel)]="segundaCarrera" class="form-control" name="segundaCarrera">
-                        <option value="null">Ninguna</option>
+                        <option [ngValue]=null>Ninguna</option>
                         <option *ngFor="let c of carreras" [ngValue]="c" >{{c.nombre}}</option>
                     </select>
                 </div>
@@ -271,7 +271,7 @@
                         <label class="col-sm-2 control-label">Énfasis Secundario</label>
                         <div class="col-sm-10">
                             <select [(ngModel)]="enfasisSecundario" class="form-control" name="enfasisSecundario">
-                            <option value=null>Ninguna</option>
+                            <option [ngValue]=null>Ninguna</option>
                             <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                         </select>
                         </div>
@@ -290,7 +290,7 @@
                             <label class="col-sm-2 control-label">Énfasis secundario</label>
                             <div class="col-sm-10">
                                 <select [(ngModel)]="enfasisSecundarioSegundaCarrera" class="form-control" name="enfasisSecundarioSegundaCarrera">
-                                    <option value=null>Ninguna</option>
+                                    <option [ngValue]=null>Ninguna</option>
                                     <option *ngFor="let e of enfasisSegundaCarrera" [ngValue]="e" >{{e.nombre}}</option>
                                 </select>
                             </div>
@@ -390,7 +390,7 @@
                         <label class="col-sm-2 control-label">Énfasis Secundario</label>
                         <div class="col-sm-10">
                             <select [(ngModel)]="enfasisSecundario" class="form-control" name="enfasisSecundario">
-                                <option value="null">Ninguna</option>
+                                <option [ngValue]=null>Ninguna</option>
                                 <option *ngFor="let e of enfasisCarrera" [ngValue]="e" >{{e.nombre}}</option>
                             </select>
                         </div>
