--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -66,7 +66,7 @@
                     <div class="col-xs-3">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div [scrollPoint]="0" class="panel panel-default center">
+                                <div class="panel panel-default center">
                                     <div class="panel-heading">Solicitudes de amistad</div>
                                     <div class="panel-body center">
                                         <button (click)="showRequests()" type="button" class="btn btn-primary">Pendientes <span class="badge">{{cantidadSolicitudes}}</span></button>
@@ -74,7 +74,8 @@
                                 </div>
                             </div>
                             <div *ngFor="let r of recomendaciones;let i = index" class="col-xs-12">
-                                <div [scrollPoint]="127*(i+1)" [ngClass]="r.conexion != 'NO_RECOMENDAR'?'panel panel-info center':'panel panel-danger center'">
+                                <!-- [scrollPoint]="127*(i+1)" -->
+                                <div [ngClass]="r.conexion != 'NO_RECOMENDAR'?'panel panel-info center':'panel panel-danger center'">
                                     <div class="panel-heading">
                                         <a (click)="goProfile(r.username)">{{r.nombre}}</a>
                                         <button type="button" class="close" (click)="removeRecomendacion(r.username)">&times;</button>
