--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -26,6 +26,9 @@ a:hover{
 .right{
     float:right;
 }
+.left{
+    text-align:justify;
+}
 .modal{
   background: rgba(1, 1, 1, 0.5);
 }
@@ -60,4 +63,9 @@ textarea{
  }
 .input-group{
     width:514px;
+}
+
+.titulo{
+    text-align: left;
+    
 }
