Panel del admin y una parte del CRUD

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -35,7 +35,7 @@
         <div class="col-xs-1">
         </div>
         <div class="col-xs-3">
-            <div class="panel panel-default">
+            <div [scrollPoint]="0" class="panel panel-default">
                 <div class="panel-heading">
                     <h2 class="center">Información básica</h2>
                     <p><strong>Nombre: </strong>{{usuario.nombre}}</p>
