--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -26,6 +26,9 @@ a:hover{
 .right{
     float:right;
 }
+.left{
+    text-align:justify;
+}
 .modal{
   background: rgba(1, 1, 1, 0.5);
 }
@@ -55,6 +58,14 @@ textarea{
 >>> .ui-growl{
     top: 50px;
 }
+.sticky-nav {
+  position:fixed;
+ }
 .input-group{
     width:514px;
+}
+
+.titulo{
+    text-align: left;
+    
 }
