--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -1,16 +1,32 @@
-
-    <div class="panel panel-danger">
-        <div class="panel-heading">{{idea.usuario}}</div>
-        <div class="panel-body">{{idea.contenido}}</div>
-        <div class="panel-body">{{idea.comentarios}}</div>
+<div class="panel panel-info">
+    <div class="panel-heading titulo">
+    <div class="row" >
+        <div class="col-xs-6">
+           <a>{{idea.usuario}}</a>
+        </div>
+        <div class="col-xs-6">
+            <label style=" text-align: right;">Publicada: {{idea.fechaCreacion | date:"dd/MM/yyyy"}}</label>
+        </div>
+    </div>
+    </div>
+        <div class="panel-body titulo">{{idea.contenido}}</div>
+        <div class="panel-body titulo" >Tags: {{tags}}</div>
+        <div class="panel-body ">
+            <div class="row">
+                <div class="col-xs-4"><a>Lights: {{idea.lights}}</a></div>
+                <div class="col-xs-4"><a>Comentarios: {{idea.comentarios}}</a></div>
+                <div class="col-xs-4"><a style="text-decoration: underline;">Detalles</a></div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-4"><button type="button" (click)="light()" 
-                class="btn btn-default btn-block" [style.backgroundColor] = "(idea.isLight)? '#DBA901':'grey'"><i class="glyphicon glyphicon-asterisk">
+                class="btn btn-default btn-block" [style.backgroundColor] = "(idea.isLight)? '#BBE3EF' : 'Transparent'"><i class="glyphicon glyphicon-asterisk">
                 </i> Light</button></div>
             <div class="col-xs-4"><button type="button" (click)="comentar()" 
                 class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" >
                 </i> Comentar</button></div>
-            <div class="col-xs-4"><button type="button" class="btn btn-default btn-block">
+            <div class="col-xs-4"><button type="button" class="btn btn-default btn-block"
+                (click) = "compartir()" [class.disabled] = "idea.isCompartida">
                 <i class="glyphicon glyphicon-share"></i> Share</button></div>
-        </div>
-    </div>
+        </div>    
+</div>
