--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -17,7 +17,6 @@
                                             <option value="PE">Para empezar</option>
                                         </select>
                                     </div>
-
                                     <div class="form-group">
                                         <h4>Contenido</h4>
                                         <textarea class="form-control" rows="5" [(ngModel)]="contenido" name="content"></textarea>
@@ -74,7 +73,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div *ngFor="let r of recomendaciones" class="col-xs-12">
+                            <div *ngFor="let r of recomendaciones;let i = index" class="col-xs-12">
+                                <!-- [scrollPoint]="127*(i+1)" -->
                                 <div [ngClass]="r.conexion != 'NO_RECOMENDAR'?'panel panel-info center':'panel panel-danger center'">
                                     <div class="panel-heading">
                                         <a (click)="goProfile(r.username)">{{r.nombre}}</a>
