--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -31,7 +31,7 @@
     <div class="col-xs-1">
     </div>
     <div class="col-xs-3">
-        <div class="panel panel-default">
+        <div [scrollPoint]="0" class="panel panel-default">
             <div class="panel-heading">
                 <button type="button" (click)="editBasis()" class="btn btn-success btn-circle right"><i class="glyphicon glyphicon-pencil"></i></button>
                 <h2 class="center">Información básica</h2>
