--- a/src/app/access/signup.component.css
+++ b/src/app/access/signup.component.css
@@ -59,3 +59,8 @@ img{
 .aconocimiento{
     text-align: right;
 }
+.resaltar{
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 18px;
+}
