--- a/src/app/newsfeed/home.component.html
+++ b/src/app/newsfeed/home.component.html
@@ -48,10 +48,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xs-8"></div>
+                            <div class="col-xs-5"></div>
+                            <div class="col-xs-3">Ordenar por:</div>
                             <div class="col-xs-4">
                                 <select name="orden" id="orden" class="form-control btn btn-primary">
-                                    <option value="CR">Cronologicamente</option>
+                                    <option value="CR">Cronológicamente</option>
                                     <option value="RL">Relevancia</option>
                                 </select> 
                             </div>
@@ -81,10 +82,11 @@
                                         <button type="button" class="close" (click)="removeRecomendacion(r.username)">&times;</button>
                                     </div>
                                     <div class="panel-body center">
-                                        <button #friendButton *ngIf="r.conexion == 'CONFIANZA'" (click)="agregarAmigo(r.username)" type="button" class="btn btn-danger">
+                                        <button #friendButton *ngIf="r.conexion == 'CONFIANZA'" (click)="agregarAmigo(r.username,i)" type="button" class="btn btn-danger">
                                             <span class="glyphicon glyphicon-user"></span> Agregar como amigo</button>
-                                        <button #followButton *ngIf="r.conexion != 'CONFIANZA'" (click)="seguirUsuario(r.username)" type="button" class="btn btn-danger">
+                                        <button #friendButton *ngIf="r.conexion != 'CONFIANZA'" (click)="seguirUsuario(r.username,i)" type="button" class="btn btn-danger">
                                             <span class="glyphicon glyphicon-eye-open"></span> Seguir</button>
+                                        <img *ngIf="r.conexion == 'NO_RECOMENDAR'" src="images/icons/lightbulb_on.png" />
                                     </div>
                                 </div>
                             </div>
