--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,4 +1,4 @@
-.btn{
+.btn-aval{
     margin:5px;
     white-space: normal;
 }
@@ -48,4 +48,30 @@
 .remove{
     display: block;
     position: absolute;
+}
+.pdf-thumb-box {
+  display: inline-block !important;
+  position: relative !important;
+  overflow: hidden;
+}
+.pdf-thumb-box-overlay {
+  display: none;
+}
+.pdf-thumb-box a:hover .pdf-thumb-box-overlay {
+  display: inline;
+  text-align: right;
+  position: absolute;
+  transition: background 0.2s ease, padding 0.8s linear;
+
+  color: gray;
+  width: 100%;
+  height: 100%;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+}
+.pdf-thumb-box-overlay span {
+  position: relative;
+  top: 15%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
