--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -1,51 +1,46 @@
+<!-- <nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <ul class="nav navbar-nav">
+            <li [ngClass]="{ 'active': activeTab == 'ideas' }"><a (click)="moveTab('ideas')" class="links">Principal</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'info' }"><a (click)="moveTab('info')" class="links">Información académica</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'friends' }"><a (click)="moveTab('friends')" class="links">Amigos</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'following' }"><a (click)="moveTab('following')" class="links">Siguiendo</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'followers' }"><a (click)="moveTab('followers')" class="links">Seguidores</a></li>
+            <li [ngClass]="{ 'active': activeTab == 'badges' }"><a (click)="moveTab('badges')" class="links">Insignias</a></li>
+            <li *ngIf="usuario.tipoUsuario == 'PROFESOR'" [ngClass]="{ 'active': activeTab == 'tg' }"><a (click)="moveTab('tg')" class="links">TG Dirigidos</a></li>
+            <li *ngIf="usuario.tipoUsuario != 'ESTUDIANTE'" [ngClass]="{ 'active': activeTab == 'career' }"><a (click)="moveTab('career')" class="links">Formación académica</a></li>
+        </ul>
+    </div>
+</nav> -->
+
 <div class="container">
     <h1>CRUD</h1>
     <p-tabView>
         <p-tabPanel header="Etiquetas">
-        
+
         </p-tabPanel>
         <p-tabPanel header="Habilidades">
             Content 2
         </p-tabPanel>
         <p-tabPanel header="Gustos">
-            Content 3    
+            Content 3
         </p-tabPanel>
         <p-tabPanel header="Carreras">
-            
-     <!--       <p-dataTable [value]="AreasC" selectionMode="single" [(selection)]="selectedAC" (onRowSelect)="onRowSelect($event)" [paginator]="true" rows="15" [responsive]="true">
-            <p-header>CRUD Area de Conocimiento</p-header>
-            <p-column field="Nombre" header="Nombre" [sortable]="true"></p-column>
-            <p-column field="Carrera" header="Carrera" [sortable]="true"></p-column>
-            <p-column field="Porcentaje" header="Porcentaje" [sortable]="true"></p-column>
-            <p-footer><div class="ui-helper-clearfix" style="width:100%"><button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add"></button></div></p-footer>
+
+            <p-dataTable [value]="AreasC" selectionMode="single" [(selection)]="selectedAC" (onRowSelect)="onRowSelect($event)" [paginator]="true"
+                rows="10" [responsive]="true">
+                <p-header>CRUD Area de Conocimiento</p-header>
+                <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+                <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
+                <p-column field="porcentaje" header="Porcentaje" [sortable]="true"></p-column>
+                <p-footer>
+                    <div class="ui-helper-clearfix" style="width:100%"><button type="button" pButton icon="fa-plus" style="float:left" (click)="showDialogToAdd()" label="Add"></button></div>
+                </p-footer>
             </p-dataTable>
 
-            <p-dialog header="Detalles" [(visible)]="displayDialog" [responsive]="true" showEffect="fade" [modal]="true">
-                   <div class="ui-grid ui-grid-responsive ui-fluid" *ngIf="AC">
-                    <div class="ui-grid-row">
-                        <div class="ui-grid-col-4"><label for="Nombre">Nombre</label></div>
-                        <div class="ui-grid-col-8"><input pInputText id="Nombre" [(ngModel)]="AC.nombre" /></div>
-                    </div>
-                    <div class="ui-grid-row">
-                        <div class="ui-grid-col-4"><label for="Carrera">Carrera</label></div>
-                        <div class="ui-grid-col-8"><input pInputText id="Carrera" [(ngModel)]="AC.carrera" /></div>
-                    </div>
-                    <div class="ui-grid-row">
-                        <div class="ui-grid-col-4"><label for="Porcentaje">Porcentaje</label></div>
-                        <div class="ui-grid-col-8"><input pInputText id="Porcentaje" [(ngModel)]="AC.porcentaje" /></div>
-                    </div>
-                </div>
-                <p-footer>
-                    <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                        <button type="button" pButton icon="fa-close" (click)="delete()" label="Delete"></button>
-                        <button type="button" pButton icon="fa-check" (click)="save()" label="Save"></button>
-                    </div>
-                </p-footer>
-            </p-dialog>-->
-            
         </p-tabPanel>
         <p-tabPanel header="Énfasis">
-            Content 5    
+            Content 5
         </p-tabPanel>
     </p-tabView>
 </div>
