rastreo de personas que comparten la idea y arreglo de tags

--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -2,7 +2,8 @@
     <div class="panel-heading titulo">
     <div class="row" >
         <div class="col-xs-6">
-           <a>{{idea.usuario}}</a>
+           <a *ngIf = "idea.compartida === false" (click) = "goProfile(idea.usuario)">{{idea.usuario}}</a>
+           <span *ngIf = "idea.compartida === true"><a (click) = "goProfile(idea.usuario)">{{idea.usuario}}</a> compartida de: <a (click) = "goProfile(idea.usuarioOriginal)">{{idea.usuarioOriginal}}</a></span>
         </div>
         <div class="col-xs-6">
             <label style=" text-align: right;">Publicada: {{idea.fechaCreacion | date:"dd/MM/yyyy"}}</label>
