--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -17,7 +17,7 @@
     <div class="col-xs-2"></div>
     <div class="col-xs-8">
         <p-dataTable [value]="carreras" selectionMode="single" [(selection)]="selectedcarrera" (onRowSelect)="onRowSelect($event)" [paginator]="true"
-            rows="10" [responsive]="true">
+            [rows]="10" emptyMessage="No hay carreras">
             <p-header>CRUD Carreras</p-header>
             <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
             <p-column field="facultad" header="Facultad" [sortable]="true"></p-column>
