--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -8,7 +8,7 @@
     max-width: 300px;
     margin: auto;
     background: #EBEBEB;
-    min-height: 500px;
+    min-height: 400px;
 }
 .container-card{
     padding: 0 16px;
@@ -77,4 +77,13 @@
 }
 >>> .ui-growl{
     top:60px;
+}
+>>>.img-thumbnail{
+    width:128px;
+    height: 128px;
+}
+.profile_image{
+    width:128px;
+    height: 128px;
+    border: 3px solid black;
 }
