--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,8 +3,7 @@
         <div class="center">
             <div class="col-xs-1"></div>
             <div class="col-xs-3">
-                <img *ngIf="usuario.genero == 'Femenino'" src="images/icons/woman.png" class="img-thumbnail" width="128" height="128">
-                <img *ngIf="usuario.genero == 'Masculino'" src="images/icons/dude4_x128.png" class="img-thumbnail" width="128" height="128">
+                <img src={{imagePath}} class="img-thumbnail" />
             </div>
             <div class="col-xs-4">
                 <h2>{{usuario.nombre}} {{usuario.apellido}}</h2>
@@ -193,7 +192,8 @@
             <div class="row">
                 <div *ngFor="let a of usuario.amigos" class="col-xs-4">
                     <div class="card">
-                        <img src="images/image-profile.png" class="find-user">
+                        <img src="{{serverUri}}{{a.username}}"
+                            (error)="errorImageHandler($event,a.username,a.genero)" class="profile_image">
                         <div class="container-card">
                             <h2 class="name-card">{{a.nombre}}</h2>
                             <p class="title-card">{{a.carrera}}</p>
@@ -214,7 +214,8 @@
             <div class="row">
                 <div *ngFor="let s of usuario.seguidores" class="col-xs-4">
                     <div class="card">
-                        <img src="images/image-profile.png" class="find-user">
+                        <img src="{{serverUri}}{{s.username}}"
+                            (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
                         <div class="container-card">
                             <h2 class="name-card">{{s.nombre}}</h2>
                             <p class="title-card">{{s.carrera}}</p>
@@ -235,7 +236,8 @@
             <div class="row">
                 <div *ngFor="let s of usuario.siguiendo" class="col-xs-4">
                     <div class="card">
-                        <img src="images/image-profile.png" class="find-user">
+                        <img src="{{serverUri}}{{s.username}}"
+                            (error)="errorImageHandler($event,s.username,s.genero)" class="profile_image">
                         <div class="container-card">
                             <h2 class="name-card">{{s.nombre}}</h2>
                             <p class="title-card">{{s.carrera}}</p>
