asociar tg a idea

--- a/src/app/modals/asociarTG.component.html
+++ b/src/app/modals/asociarTG.component.html
@@ -17,7 +17,7 @@
         </div>
             <div class="panel-body titulo">{{t.resumen}}</div>
             <div class="panel-body titulo">Numero de estudiantes: {{t.numEstudiantes}}</div>
-            <div class="panel-body "> <button class="btn btn-primary" (click) = "agregar(i)"> Agregar </button></div>
+            <div class="panel-body "> <button class="btn btn-primary" (click) = "agregar(t)"> Agregar </button></div>
         </div>
         
         </div>         
