Se completo CRUD para Carrera en panel de adminitrador

--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -23,8 +23,7 @@
             <p-column field="facultad" header="Facultad" [sortable]="true"></p-column>
            <!-- <p-column field="carrerasAfines" header="Carreras Afines" [sortable]="true"></p-column>-->
             <p-footer>
-                <!-- (click)="showDialogToAdd()"-->
-                <button type="submit" class="btn btn-primary btn-block"   (click)="editCarrera()">Agregar</button>
+                <button type="submit" class="btn btn-primary btn-block"   (click)="createCarrera()">Agregar</button>
             </p-footer>
         </p-dataTable>
     </div>
