mostrar detalles de las ideas

--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-xs-4"><a>Lights: {{idea.lights}}</a></div>
                 <div class="col-xs-4"><a>Comentarios: {{idea.comentarios}}</a></div>
-                <div class="col-xs-4"><a style="text-decoration: underline;">Detalles</a></div>
+                <div class="col-xs-4"><a style="text-decoration: underline;" (click) = "detalles()">Detalles</a></div>
             </div>
         </div>
         <div class="row">
