--- a/src/app/access/login.component.html
+++ b/src/app/access/login.component.html
@@ -5,37 +5,43 @@
             <br>
             <div  align="center" class="col-xs-6">
                 <div class="media-left">
-                    <img src="images/busca.png" class="media-object" style="width:150px">
+                    <img src="images/busca.png" class="media-object" style="width:100px">
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading"><b>BUSCA</b></h4>
-                        <p>Know&Share te permite buscar ideas de trabajo de grado, así como usuarios para conectarte. Adicionalmente te recomienda ideas teniendo en cuenta tus habilidades, gustos y preferencias.</p>
+                    <h4 class="media-heading"><FONT COLOR="red"><b>BUSCA</b></FONT></h4>
+                        <b><FONT SIZE=4>Know&Share te permite buscar ideas de trabajo de grado e interactuar con personas como tú.</FONT></b>
                 </div>
                 <br>
+                <br>
+                <br>
+                <br>
                 <div class="media-left">
-                    <img src="images/avala.png" class="media-object" style="width:150px">
+                    <img src="images/idea.png" class="media-object" style="width:70px">
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading"><b>AVALA</b></h4>
-                        <p>Avala las cualidades de tus profesores y a final de semestre mira quien gana la insignia al mejor profesor en cada categoría.</p>
+                    <h4 class="media-heading"><FONT COLOR="red"><b>IDEAS</b></FONT></h4>
+                        <b><FONT SIZE=4>Know&Share te ofrece 4 tipos de ideas: Nueva, Para Empezar, Para Continuar y Proyecto... ¡Pruébalas todas! </FONT></b>
                 </div>
             </div>
 
             <div  align="center" class="col-xs-6">
                 <div class="media-left">
-                    <img src="images/conectate.png" class="media-object" style="width:150px">
+                    <img src="images/conectate.png" class="media-object" style="width:120px">
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading"><b>CONÉCTATE</b></h4>
-                        <p>Sigue a una persona de interes ó crea una relación de confianza con tus amigos. No te preocupes... Know&Share también te recomienda usuarios para seguir o agregar segú tu perfil.</p>
+                    <h4 class="media-heading"><FONT COLOR="red"><b>CONÉCTATE</b></FONT></h4>
+                        <b><FONT SIZE=4>Conéctate con tus amigos y personas de tu interés. ¡No sabes a quien puedes conocer!</FONT></b>
                 </div>
                 <br>
+                <br>
+                <br>
+                <br>
                 <div class="media-left">
-                    <img src="images/idea.png" class="media-object" style="width:100px">
+                    <img src="images/avala.png" class="media-object" style="width:160px">
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading"><b>IDEAS</b></h4>
-                        <p>Know&Share te ofrece 4 tipos de ideas: Nueva, Para Empezar, Para Continuar y Proyecto... Pruebalas todas! </p>
+                    <h4 class="media-heading"><FONT COLOR="red"><b>AVALA</b></FONT></h4>
+                        <b><FONT SIZE=4>Avala a tus profesores y compañeros. ¡Demuestra quien es el mejor!</FONT></b>
                 </div>
             </div>
 
@@ -65,5 +71,8 @@
                 </form>
             </div>
         </div>
+        <div align = "center" >
+                    <img src="images/Grado.jpg" class="media-object" style="width:250px">
+         </div>
     </div>
 </div>
