--- a/src/app/admin/admin-crud.component.html
+++ b/src/app/admin/admin-crud.component.html
@@ -4,8 +4,8 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <ul class="nav navbar-nav">
-                <li [ngClass]="{ 'active': activeTab == 'etiquetas' }"><a (click)="moveTab('etiquetas')" class="links">Taqs</a></li>
-                <li [ngClass]="{ 'active': activeTab == 'habilidades' }"><a (click)="moveTab('habilidades')" class="links">Habilidades Profesionales</a></li>
+                <li [ngClass]="{ 'active': activeTab == 'etiquetas' }"><a (click)="moveTab('etiquetas')" class="links">Tags</a></li>
+                <li [ngClass]="{ 'active': activeTab == 'habilidades' }"><a (click)="moveTab('habilidades')" class="links">Habilidades</a></li>
                 <li [ngClass]="{ 'active': activeTab == 'gustos' }"><a (click)="moveTab('gustos')" class="links">Gustos</a></li>
                 <li [ngClass]="{ 'active': activeTab == 'carreras' }"><a (click)="moveTab('carreras')" class="links">Carreras</a></li>
                 <li [ngClass]="{ 'active': activeTab == 'enfasis' }"><a (click)="moveTab('enfasis')" class="links">Énfasis</a></li>
@@ -41,3 +41,17 @@
         </p-dataTable>
     </div>
 </div>
+<div *ngIf="activeTab == 'habilidades'" class="row">
+    <div class="col-xs-2"></div>
+    <div class="col-xs-8">
+        <p-dataTable [value]="habilidades" selectionMode="single" [(selection)]="selectedHabilidad" (onRowSelect)="onRowSelectHabilidad($event)" [paginator]="true"
+            [rows]="10" emptyMessage="No hay habilidades">
+            <p-header>CRUD Habilidades</p-header>
+            <p-column field="nombre" header="Nombre" [sortable]="true"></p-column>
+            <p-column field="tipo" header="Tipo" [sortable]="true"></p-column>
+            <p-column field="carrera" header="Carrera" [sortable]="true"></p-column>
+            <p-footer>
+                <button type="submit" class="btn btn-primary btn-block"   (click)="createHabilidad()">Agregar</button>
+            </p-footer>
+        </p-dataTable>
+    </div>
