--- a/src/app/admin/panel-admin.component.html
+++ b/src/app/admin/panel-admin.component.html
@@ -8,10 +8,13 @@
 
     </div>
     <div class="col-xs-4">
-      <h4 align="center" class="media-heading"><b>Estadística</b></h4>
+      <h4 align="center" class="media-heading"><b>Motor De Reglas</b></h4>
+     <!-- también esta opción <a (click)="onclickMotor()"><img src="images/motor.jpg" class="media-object" style="width:350px"></a>-->
+       <a (click)="onclickMotor()"><img src="images/motor.png" class="media-object" style="width:350px"></a>
     </div>
     <div class="col-xs-4">
-      <h4 align="center" class="media-heading"><b>Otro</b></h4>
+      <h4 align="center" class="media-heading"><b>Estadística</b></h4>
+      <a (click)="onclickEstadistica()"><img src="images/estadistica.jpg" class="media-object" style="width:400px"></a>
     </div>
   </div>
 </div>
