--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -14,8 +14,8 @@
         <div class="panel-body titulo" >Tags: {{tags}}</div>
         <div class="panel-body ">
             <div class="row">
-                <div class="col-xs-4"><a>Lights: {{idea.lights}}</a></div>
-                <div class="col-xs-4"><a>Comentarios: {{idea.comentarios}}</a></div>
+                <div class="col-xs-4"><a (click) = "detallesLight()">Lights: {{idea.lights}}</a></div>
+                <div class="col-xs-4"><a (click) = "detallesComentarios()">Comentarios: {{idea.comentarios}}</a></div>
                 <div class="col-xs-4"><a style="text-decoration: underline;" (click) = "detalles()">Detalles</a></div>
             </div>
         </div>
