--- a/src/app/modals/crear-idea.html
+++ b/src/app/modals/crear-idea.html
@@ -30,7 +30,7 @@
                     <label for="alcance">Alcance: </label>
                     <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
                     <label for="problematica">Problematica: </label>
-                    <input class="form-control" type="text" [(ngModel)]="problematica" name="problem">
+                    <textarea class="form-control" type="text" [(ngModel)]="problematica" rows = '5' name="problem"></textarea>
                 </div>
                 <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
                     <button type="button" class="btn" (click) = "agregarIdeas()">Agregar ideas</button>
