--- a/src/app/access/login.component.html
+++ b/src/app/access/login.component.html
@@ -49,6 +49,9 @@
         <div class="col-xs-4">
             <div class="well">
                 <form novalidate (ngSubmit)="login()" [formGroup]="loginForm">
+                    <div class="alert alert-danger" *ngIf="errorLogin">
+                        Credenciales incorrectas.
+                    </div>
                     <div class="form-group">
                         <label for="username" class="control-label">Nombre de usuario:</label>
                         <input [(ngModel)]="username" type="text" class="form-control" id="username" name="username" formControlName="username">
