--- a/src/app/admin/panel-admin.component.html
+++ b/src/app/admin/panel-admin.component.html
@@ -4,17 +4,17 @@
     <br>
     <div class="col-xs-4">
       <h4 align="center" class="media-heading"><b>CRUD</b></h4>
-      <a (click)="onclickCrud()"><img src="images/CRUD.png" class="media-object" style="width:400px"></a>
+      <a (click)="onclickCrud()"><img src="images/CRUD.png" class="media-object" style="width:400px;"></a>
 
     </div>
     <div class="col-xs-4">
       <h4 align="center" class="media-heading"><b>Motor De Reglas</b></h4>
-     <!-- también esta opción <a (click)="onclickMotor()"><img src="images/motor.jpg" class="media-object" style="width:350px"></a>-->
-       <a (click)="onclickMotor()"><img src="images/motor.png" class="media-object" style="width:350px"></a>
+      <!-- también esta opción <a (click)="onclickMotor()"><img src="images/motor.jpg" class="media-object" style="width:350px"></a>-->
+      <a (click)="onclickMotor()"><img src="images/motor.png" class="media-object center" style="width:200px;height:200px;display: block;margin: 0 auto;"></a>
     </div>
     <div class="col-xs-4">
       <h4 align="center" class="media-heading"><b>Estadística</b></h4>
-      <a (click)="onclickEstadistica()"><img src="images/estadistica.jpg" class="media-object" style="width:400px"></a>
+      <a (click)="onclickEstadistica()"><img src="images/estadistica.jpg" class="media-object" style="width:400px;"></a>
     </div>
   </div>
 </div>
